// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`turns a failing mocha tests to Jest test result 1`] = `
Object {
  "console": null,
  "coverage": undefined,
  "failureMessage": "
    This test failed

      [31mThe error message[0m
      [32m+ expected[0m [31m- actual[0m

      [31m-2[0m
      [32m+1[0m
      
Error stack

",
  "numFailingTests": 1,
  "numPassingTests": 0,
  "numPendingTests": 0,
  "perfStats": Object {
    "end": 946684801000,
    "start": 946684800000,
  },
  "skipped": false,
  "snapshot": Object {
    "added": 0,
    "fileDeleted": false,
    "matched": 0,
    "unchecked": 0,
    "unmatched": 0,
    "updated": 0,
  },
  "sourceMaps": Object {},
  "testExecError": null,
  "testFilePath": "path/to/file",
  "testResults": Array [
    Object {
      "ancestorTitles": Array [],
      "duration": 0.004,
      "failureMessages": "
    This test failed

      [31mThe error message[0m
      [32m+ expected[0m [31m- actual[0m

      [31m-2[0m
      [32m+1[0m
      
Error stack

",
      "fullName": "This test failed",
      "numPassingAsserts": 1,
      "status": "failed",
      "title": "This test failed",
    },
  ],
}
`;

exports[`turns a passing mocha tests to Jest test result 1`] = `
Object {
  "console": null,
  "coverage": undefined,
  "failureMessage": null,
  "numFailingTests": 0,
  "numPassingTests": 1,
  "numPendingTests": 0,
  "perfStats": Object {
    "end": 946684801000,
    "start": 946684800000,
  },
  "skipped": false,
  "snapshot": Object {
    "added": 0,
    "fileDeleted": false,
    "matched": 0,
    "unchecked": 0,
    "unmatched": 0,
    "updated": 0,
  },
  "sourceMaps": Object {},
  "testExecError": null,
  "testFilePath": "path/to/file",
  "testResults": Array [
    Object {
      "ancestorTitles": Array [],
      "duration": 0.001,
      "failureMessages": null,
      "fullName": "This test passes[1]",
      "numPassingAsserts": 0,
      "status": "passed",
      "title": "This test passes[1]",
    },
  ],
}
`;

exports[`turns a passing mocha tests to Jest test result with coverage 1`] = `
Object {
  "console": null,
  "coverage": Object {
    "mocked": "coverageData",
  },
  "failureMessage": null,
  "numFailingTests": 0,
  "numPassingTests": 1,
  "numPendingTests": 0,
  "perfStats": Object {
    "end": 946684801000,
    "start": 946684800000,
  },
  "skipped": false,
  "snapshot": Object {
    "added": 0,
    "fileDeleted": false,
    "matched": 0,
    "unchecked": 0,
    "unmatched": 0,
    "updated": 0,
  },
  "sourceMaps": Object {},
  "testExecError": null,
  "testFilePath": "path/to/file",
  "testResults": Array [
    Object {
      "ancestorTitles": Array [],
      "duration": 0.001,
      "failureMessages": null,
      "fullName": "This test passes[1]",
      "numPassingAsserts": 0,
      "status": "passed",
      "title": "This test passes[1]",
    },
  ],
}
`;

exports[`turns a whole mocha tests suite to Jest test result 1`] = `
Object {
  "console": null,
  "coverage": undefined,
  "failureMessage": "
    This test failed

      [31mThe error message[0m
      [32m+ expected[0m [31m- actual[0m

      [31m-2[0m
      [32m+1[0m
      
Error stack

",
  "numFailingTests": 0,
  "numPassingTests": 1,
  "numPendingTests": 0,
  "perfStats": Object {
    "end": 946684801000,
    "start": 946684800000,
  },
  "skipped": false,
  "snapshot": Object {
    "added": 0,
    "fileDeleted": false,
    "matched": 0,
    "unchecked": 0,
    "unmatched": 0,
    "updated": 0,
  },
  "sourceMaps": Object {},
  "testExecError": null,
  "testFilePath": "path/to/file",
  "testResults": Array [
    Object {
      "ancestorTitles": Array [],
      "duration": 0.001,
      "failureMessages": null,
      "fullName": "This test passes[1]",
      "numPassingAsserts": 0,
      "status": "passed",
      "title": "This test passes[1]",
    },
    Object {
      "ancestorTitles": Array [],
      "duration": 0.004,
      "failureMessages": null,
      "fullName": "This test also passes[2]",
      "numPassingAsserts": 0,
      "status": "passed",
      "title": "This test also passes[2]",
    },
    Object {
      "ancestorTitles": Array [],
      "duration": 0.004,
      "failureMessages": "
    This test failed

      [31mThe error message[0m
      [32m+ expected[0m [31m- actual[0m

      [31m-2[0m
      [32m+1[0m
      
Error stack

",
      "fullName": "This test failed",
      "numPassingAsserts": 1,
      "status": "failed",
      "title": "This test failed",
    },
  ],
}
`;
